k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ping
spec:
  rules:
    - host: 'localhost'
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: go-ping
                port:
                  number: 8080
